syntax = "proto3";

package test.package;

option go_package = "github.com/sapk/protoc-gen-openapiv3/testdata;testdata";

service TestService {
  rpc TestMethod(TestRequest) returns (TestResponse);
}

message TestRequest {
  string test_field = 1;
}

message TestResponse {
  string result = 1;
} 